# Process-analysis-utility

./: README.md
processes/: CMakeLists.txt  main.cpp
processes/info/: information_about_process.h  many_processes.h
processes/info/src/: information_about_process.cpp  many_processes.cpp
processes/utilities/: file_reader.h  option.h
processes/utilities/src/: file_reader.cpp  option.cpp
